Update "question/detail/{id}"" request
1. QuestionController.java "localhost:8080/question/detail/{id} url" 매핑 컨트롤러 추가
2. 컨트롤러 return question_detail.html 추가
3. 컨트롤러 -> 리포지토리 관계 컨트롤러 -> 서비스 -> 리포지토리 관계로 변경

--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -7,7 +7,9 @@
     </thead>
     <tbody>
     <tr th:each="question : ${questionList}">
-        <td th:text="${question.subject}"></td>
+        <td>
+            <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+        </td>
         <td th:text="${question.createDate}"></td>
     </tr>
     <!-- questionController에서 Model객체에 addAttribute() 메서드로 questionList를 사용한다.-->
